syntax = "proto3";

import "messages/rpc_auth_messages.proto";

package car_service;
option csharp_namespace = "Shared.Grpc.Services";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
  rpc VerifyAction(VerifyActionRequest) returns (VerifyActionResponse);
  rpc GetUsersWithRoles (GetUsersWithRolesRequest) returns (GetUsersWithRolesResponse);
  rpc AddRole (AddRoleRequest) returns (AddRoleResponse);
  rpc RemoveRole (RemoveRoleRequest) returns (RemoveRoleResponse);
}
