syntax = "proto3";

package car_service;

message RolePermission {
  int32 role_id = 1;
  int32 permission_id = 2;
}
